<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Primeira Tela</string>
    <string name="Digite_um_nome">Digite um nome:</string>
    <string name="Horario">Horario</string>
    <string name="Caixa">Caixa</string>
    <string name="Salvar">Salvar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="cadastro">Cadastro</string>
    <string name="dados">Dados</string>
    <string name="about">Sobre</string>
    <string name="nome">NOME</string>
    <string name="idade">IDADE</string>
    <string name="end">ENDEREÇO</string>
    <string name="salvar">SALVAR</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="numbers">0123456789</string>
    <string name="sim">SIM</string>
    <string name="nao">NÂO</string>
    <string name="pergunta1">SEUS DADOS ESTÃO CORRETOS?</string>
    <string name="cadastro_salvo">Cadastro realizado com sucesso</string>
    <string name="scan">Ler código de barras</string>
    <string name="errorField">Campo inválido</string>
    <string name="cancelado">Cancelado</string>
    <string name="universidade">Universidade</string>
    <string name="curso">Curso</string>
    <string name="aluno">Aluno</string>
    <string name="descricao">Renato Benatti é estudante do 4ª ano do curso de Sistemas de informação campus Sede. Possui 23 anos e reside na pacata cidade de Tapira que fica a 65km de Umuarama.</string>
    <string name="ra">RA: 00135678</string>
    <string name="si">O curso de Sistemas de Informação da Unipar visa formar um profissional que se diferencia por ser capaz de atuar em um mercado em constante transformação, identificando e solucionando problemas de informação nas organizações através de recursos computacionais e humanos. Ao final do curso, você terá pleno conhecimento para atuar nas diversas áreas da informática, criando, aplicando e desenvolvendo programas, aplicativos e novas tecnologias que contribuam para a evolução da sociedade e o melhor desempenho das organizações.</string>
    <string name="unipar">A Universidade Paranaense é uma universidade privada brasileira localizada no estado do Paraná. Possui campus em Cascavel, Cianorte, Francisco Beltrão, Guaíra, Paranavaí, Toledo e Umuarama."</string>
    <string name="beep">AHHN OH AÃN AAAAH ÕÕH ÃÃÃÃH AAHN OH</string>
    <string name="ativouBeep">Eu fui trollado</string>
    <string name="run">Run, Forrest, Run!</string>
    <string name="sairAplicacao">Deseja realmente sair?</string>
</resources>
